PwJJ: update for spring boot